@@ -1,5 +1,7 @@
-.\" Copyright (c) 1988 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$NetBSD: rogue.6,v 1.5 1995/04/22 10:28:12 cgd Exp $
+.\"
+.\" Copyright (c) 1988, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,11 +31,11 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	from: @(#)rogue.6	6.5 (Berkeley) 6/23/90
-.\"	$Id: rogue.6,v 1.4 1993/08/09 22:20:37 jtc Exp $
+.\"	@(#)rogue.6	8.1 (Berkeley) 5/31/93
 .\"
-.Dd June 23, 1990
+.Dd May 31, 1993
 .Dt ROGUE 6
+.Os
 .Sh NAME
 .Nm rogue
 .Nd Exploring The Dungeons of Doom
